--- a/css/main.css
+++ b/css/main.css
@@ -78,8 +78,8 @@ hr {
     margin-bottom: 0px;
 }
 .navbar-inverse {
-    padding-bottom: 70px;
-    padding-top: 70px;
+    padding-bottom: 60px;
+    padding-top: 60px;
 }
 .navbar-inverse {
     background-color: #4B4E9B;
@@ -205,6 +205,7 @@ bt {
     float: left;
     margin-top: 5px;
     margin-left: 20px;
+    margin-bottom: 0px;
     color: #fff;
 }
 .logo img {
